--- a/templates/dashboard/components/leads/lead_items.html
+++ b/templates/dashboard/components/leads/lead_items.html
@@ -101,8 +101,9 @@
                                 </button>
                             </li>
                             <li>
-                                <button type="button" data-drawer-target="edit-lead-drawer"
-                                    data-drawer-show="edit-lead-drawer" aria-controls="edit-lead-drawer"
+                                <button type="button" data-drawer-target="edit-lead-drawer-{{ lead.id }}"
+                                    data-drawer-show="edit-lead-drawer-{{ lead.id }}"
+                                    aria-controls="edit-lead-drawer-{{ lead.id }}"
                                     class="flex w-full items-center py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white text-gray-700 dark:text-gray-200">
                                     <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20"
                                         fill="currentColor" aria-hidden="true">
