--- a/templates/dashboard/components/leads/lead_items.html
+++ b/templates/dashboard/components/leads/lead_items.html
@@ -118,7 +118,8 @@
 
                         </ul>
                         <div class="py-1">
-                            <button type="button" data-modal-target="delete-modal" data-modal-toggle="delete-modal"
+                            <button type="button" data-modal-target="delete-modal-{{ lead.id }}" 
+                            data-modal-toggle="delete-modal-{{ lead.id }}"
                                 class="flex w-full items-center py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 text-red-500 dark:hover:text-red-400">
                                 <svg class="w-4 h-4 mr-2" viewbox="0 0 14 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
