--- a/templates/dashboard/components/leads/lead_items.html
+++ b/templates/dashboard/components/leads/lead_items.html
@@ -6,7 +6,8 @@
                 <th scope="col" class="p-4">
                     <div class="flex items-center">
                         <input id="checkbox-all" type="checkbox"
-                            class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                            class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+                            onclick="toggleAllCheckboxes(this)">
                         <label for="checkbox-all" class="sr-only">checkbox</label>
                     </div>
                 </th>
