--- a/templates/dashboard/components/navigation/sidebar.html
+++ b/templates/dashboard/components/navigation/sidebar.html
@@ -94,7 +94,7 @@
 
                     </li>
                     <li>
-                        <button type="button"
+                        <a href="{%  url 'listings:listings' %}"
                             class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700"
                             aria-controls="dropdown-crud" data-collapse-toggle="dropdown-crud">
                             <svg class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
@@ -106,7 +106,7 @@
                             </svg>
                             <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Listings</span>
 
-                        </button>
+                            </button>
 
                     </li>
                     <li>
