--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -223,7 +223,7 @@
 
                 <div class="mb-4 mt-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
                     <div
-                        class="rounded-lg border border-gray-200 bg-white p-6 shadow-sm dark:border-gray-700 dark:bg-gray-800 transition-all duration-300 hover:shadow-lg hover:scale-[1.02]">
+                        class="rounded-lg border border-gray-200 bg-white p-6 shadow-sm dark:border-gray-800 dark:bg-gray-900 transition-all duration-300 hover:shadow-lg hover:scale-[1.02]">
                         <div class="flex mb-2">
                             <input type="checkbox"
                                 class="w-4 h-4 text-primary-600 bg-gray-100 border-gray-300 rounded focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
@@ -240,7 +240,7 @@
                         <div class="pt-6">
                             <div class="mb-4 flex items-center justify-between gap-4">
                                 <span
-                                    class="me-2 rounded bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-primary-800 dark:bg-primary-900 dark:text-primary-300">
+                                    class="me-2 rounded bg-green-100 px-2.5 py-0.5 text-xs font-medium text-green-800 dark:bg-green-900 dark:text-green-300">
                                     Active </span>
 
                                 <div class="flex items-center justify-end gap-1">
