--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid gap-4 grid-cols-3 xl:grid-cols-4 2xl:grid-cols-4 mt-6">
+                <div class="grid gap-4 grid-cols-2 lg:grid-cols-3 mt-6">
                     <!-- Total Leads Widget -->
                     <div
                         class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 sm:p-6 dark:bg-gray-900 transition-all duration-300 hover:shadow-lg hover:scale-[1.02] hover:border-green-200 dark:hover:border-green-800">
