--- a/templates/leads/components/drawers/delete_modal.html
+++ b/templates/leads/components/drawers/delete_modal.html
@@ -22,10 +22,8 @@
                 </svg>
                 <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete
                     this lead? This action is permanent</h3>
-                <button hx-post="{% url 'leads:delete_lead' lead.id %}"
-                    hx-target="#lead-container"
-                    hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' 
-                    data-modal-toggle="delete-modal-{{ lead.id }}"
+                <button hx-post="{% url 'leads:delete_lead' lead.id %}" hx-target="#lead-container"
+                    hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' data-modal-toggle="delete-modal-{{ lead.id }}"
                     type="button"
                     class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
                     Yes, I'm sure
