--- a/templates/leads/components/lead_container.html
+++ b/templates/leads/components/lead_container.html
@@ -1,6 +1,5 @@
 <div class="bg-white dark:bg-gray-900 relative shadow-md sm:rounded-lg overflow-hidden" id="lead-container">
-    <div
-        class="flex flex-col md:flex-row md:items-center md:justify-between space-y-3 md:space-y-0 md:space-x-4 p-4">
+    <div class="flex flex-col md:flex-row md:items-center md:justify-between space-y-3 md:space-y-0 md:space-x-4 p-4">
         <div class="flex-1 flex items-center space-x-2">
             <h5>
                 <span class="text-gray-500">All Leads:</span>
@@ -35,19 +34,16 @@
             <form class="flex items-center">
                 <label for="simple-search" class="sr-only">Search</label>
                 <div class="relative w-full">
-                    <div
-                        class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
-                        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400"
-                            fill="currentColor" viewbox="0 0 20 20"
-                            xmlns="http://www.w3.org/2000/svg">
+                    <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                        <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor"
+                            viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
                         </svg>
                     </div>
                     <input type="text" hx-get="{% url 'leads:search_leads' %}"
-                        hx-trigger="input changed delay:100ms, search" hx-target="#leads-listing"
-                        id="lead-search-input" placeholder="Search leads" name="search"
-                        value="{{ search_query }}"
+                        hx-trigger="input changed delay:100ms, search" hx-target="#leads-listing" id="lead-search-input"
+                        placeholder="Search leads" name="search" value="{{ search_query }}"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-green-500 focus:border-green-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500">
                 </div>
             </form>
@@ -58,9 +54,8 @@
             <button id="filterDropdownButton" data-dropdown-toggle="filterDropdown"
                 class="w-full md:w-auto flex items-center justify-center py-2 px-4 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
                 type="button">
-                <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                    class="h-4 w-4 mr-1.5 -ml-1 text-gray-400" viewbox="0 0 20 20"
-                    fill="currentColor">
+                <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="h-4 w-4 mr-1.5 -ml-1 text-gray-400"
+                    viewbox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd"
                         d="M3 3a1 1 0 011-1h12a1 1 0 011 1v3a1 1 0 01-.293.707L12 11.414V15a1 1 0 01-.293.707l-2 2A1 1 0 018 17v-5.586L3.293 6.707A1 1 0 013 6V3z"
                         clip-rule="evenodd" />
@@ -86,14 +81,11 @@
                 </button>
                 <div id="actionsDropdown"
                     class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600">
-                    <ul class="py-1 text-sm text-gray-700 dark:text-gray-200"
-                        aria-labelledby="actionsDropdownButton">
+                    <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="actionsDropdownButton">
                         <li>
-                            <button type="button"
-                                hx-post="{% url 'leads:bulk_delete_leads' %}"
-                                hx-target="#lead-container"
-                                hx-include="[name='selected_leads']:checked"
-                                hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' 
+                            <button type="button" hx-post="{% url 'leads:bulk_delete_leads' %}"
+                                hx-target="#lead-container" hx-include="[name='selected_leads']:checked"
+                                hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
                                 hx-confirm="Are you sure you want to delete the selected leads? This action cannot be undone."
                                 class="block w-full py-2 px-4 text-left hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">
                                 Delete Selected Leads
@@ -101,10 +93,8 @@
                         </li>
                     </ul>
                     <div class="py-1">
-                        <button type="button"
-                            hx-post="{% url 'leads:bulk_delete_leads' %}?delete_all=true"
-                            hx-target="#lead-container"
-                            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' 
+                        <button type="button" hx-post="{% url 'leads:bulk_delete_leads' %}?delete_all=true"
+                            hx-target="#lead-container" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
                             hx-confirm="Are you sure you want to delete ALL leads? This action cannot be undone."
                             class="block w-full py-2 px-4 text-sm text-left text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
                             Delete All
@@ -115,7 +105,7 @@
         </div>
     </div>
     <div id="leads-listing">
-        {% include 'dashboard/components/leads/lead_items.html' %}
+        {% include 'leads/components/lead_items.html' %}
     </div>
 
 
