--- a/templates/leads/components/lead_items.html
+++ b/templates/leads/components/lead_items.html
@@ -27,7 +27,7 @@
             <tr class="border-b dark:border-gray-700">
                 <td class="w-4 px-4 py-3">
                     <div class="flex items-center">
-                        <input id="checkbox-{{ lead.id }}" name="selected_leads" value="{{ lead.id }}" type="checkbox" 
+                        <input id="checkbox-{{ lead.id }}" name="selected_leads" value="{{ lead.id }}" type="checkbox"
                             class="w-4 h-4 bg-gray-100 border-gray-300 rounded text-green-600 focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
                         <label for="checkbox-{{ lead.id }}" class="sr-only">checkbox</label>
                     </div>
@@ -119,8 +119,8 @@
 
                         </ul>
                         <div class="py-1">
-                            <button type="button" data-modal-target="delete-modal-{{ lead.id }}" 
-                            data-modal-toggle="delete-modal-{{ lead.id }}"
+                            <button type="button" data-modal-target="delete-modal-{{ lead.id }}"
+                                data-modal-toggle="delete-modal-{{ lead.id }}"
                                 class="flex w-full items-center py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 text-red-500 dark:hover:text-red-400">
                                 <svg class="w-4 h-4 mr-2" viewbox="0 0 14 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -225,7 +225,7 @@
 </div>
 {% else %}
 <div id="alert-additional-content-5"
-    class="p-4 mb-4 m-4 border border-gray-300 rounded-lg bg-gray-50 dark:border-gray-600 dark:bg-gray-800"
+    class="p-4 mb-4 m-4 text-green-800 border border-green-300 rounded-lg bg-green-50 dark:border-gray-600 dark:bg-gray-800"
     role="alert">
     <div class="flex items-center">
         <svg class="flex-shrink-0 w-4 h-4 me-2 dark:text-gray-300" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -238,17 +238,7 @@
     <div class="mt-2 mb-4 text-sm text-gray-800 dark:text-gray-300">
         You haven't added any leads yet. Click the button below to add your first lead.
     </div>
-    <div class="flex">
-        <button data-modal-target="addLeadModal" data-modal-toggle="addLeadModal" type="button"
-            class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-xs px-3 py-1.5 me-2 text-center inline-flex items-center">
-            <svg class="me-2 h-3 w-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                viewBox="0 0 20 14">
-                <path
-                    d="M10 0C4.612 0 0 5.336 0 7c0 1.742 3.546 7 10 7 6.454 0 10-5.258 10-7 0-1.664-4.612-7-10-7Zm0 10a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z" />
-            </svg>
-            Add Lead
-        </button>
-    </div>
+
 </div>
 {% endif %}
 {% endif %}
