--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -27,7 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/apexcharts@3.46.0/dist/apexcharts.min.js"></script>
 </head>
 
-<body class="bg-gray-50 dark:bg-gray-800">
+<body class="bg-gray-50 dark:bg-gray-800 z-0">
     {% block content %}
     {% endblock content %}
     <script src="{% static 'js/tabs.js' %}"></script>
